--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@emotion/css": "^11.7.1",
+        "@emotion/react": "^11.8.1",
+        "@emotion/styled": "^11.8.1",
         "@reduxjs/toolkit": "^1.7.1",
         "@testing-library/jest-dom": "^5.16.1",
         "@testing-library/react": "^12.1.2",
@@ -50,11 +53,9 @@
         ]
     },
     "devDependencies": {
-        "autoprefixer": "^10.4.2",
-        "postcss": "^8.4.5",
-        "tailwindcss": "^3.0.12",
         "@typescript-eslint/eslint-plugin": "^4.28.2",
         "@typescript-eslint/parser": "^4.28.2",
+        "autoprefixer": "^10.4.2",
         "eslint": "^7.16.0",
         "eslint-config-prettier": "^7.1.0",
         "eslint-plugin-import": "^2.23.4",
@@ -64,6 +65,8 @@
         "eslint-plugin-simple-import-sort": "^7.0.0",
         "eslint-plugin-unused-imports": "^1.1.2",
         "husky": "^4.3.7",
-        "prettier": "^2.2.1"
+        "postcss": "^8.4.5",
+        "prettier": "^2.2.1",
+        "tailwindcss": "^3.0.12"
     }
 }
