--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "private": true,
     "dependencies": {
         "@emotion/css": "^11.7.1",
+        "@emotion/jest": "^11.8.0",
         "@emotion/react": "^11.8.1",
         "@emotion/styled": "^11.8.1",
         "@reduxjs/toolkit": "^1.7.1",
@@ -16,6 +17,9 @@
         "@types/react-dom": "^17.0.11",
         "classnames": "^2.3.1",
         "i18next": "^21.6.5",
+        "mobx": "^6.4.2",
+        "mobx-react": "^7.3.0",
+        "mobx-react-router": "^4.1.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-i18next": "^11.15.3",
