--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
         "@emotion/jest": "^11.8.0",
         "@emotion/react": "^11.8.1",
         "@emotion/styled": "^11.8.1",
-        "@reduxjs/toolkit": "^1.7.1",
         "@testing-library/jest-dom": "^5.16.1",
         "@testing-library/react": "^12.1.2",
         "@testing-library/user-event": "^13.5.0",
@@ -23,7 +22,6 @@
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-i18next": "^11.15.3",
-        "react-redux": "^7.2.6",
         "react-router-dom": "^6.2.1",
         "react-scripts": "5.0.0",
         "redux-saga": "^1.1.3",
@@ -59,7 +57,6 @@
     "devDependencies": {
         "@typescript-eslint/eslint-plugin": "^4.28.2",
         "@typescript-eslint/parser": "^4.28.2",
-        "autoprefixer": "^10.4.2",
         "eslint": "^7.16.0",
         "eslint-config-prettier": "^7.1.0",
         "eslint-plugin-import": "^2.23.4",
@@ -69,8 +66,6 @@
         "eslint-plugin-simple-import-sort": "^7.0.0",
         "eslint-plugin-unused-imports": "^1.1.2",
         "husky": "^4.3.7",
-        "postcss": "^8.4.5",
-        "prettier": "^2.2.1",
-        "tailwindcss": "^3.0.12"
+        "prettier": "^2.2.1"
     }
 }
