--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "react-i18next": "^11.15.3",
         "react-router-dom": "^6.2.1",
         "react-scripts": "5.0.0",
+        "react-test-renderer": "^17.0.2",
         "redux-saga": "^1.1.3",
         "typescript": "^4.5.4",
         "web-vitals": "^2.1.3"
@@ -55,6 +56,7 @@
         ]
     },
     "devDependencies": {
+        "@types/react-test-renderer": "^17.0.1",
         "@typescript-eslint/eslint-plugin": "^4.28.2",
         "@typescript-eslint/parser": "^4.28.2",
         "eslint": "^7.16.0",
